--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "@tailwindcss/postcss": "^4.0.4",
+    "@tailwindcss/vite": "^4.0.4",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
