--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/postcss": "^4.0.4",
     "@tailwindcss/vite": "^4.0.4",
+    "framer-motion": "^12.4.1",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
